--- a/src/app/components/push-notification-prompt/push-notification-prompt.component.html
+++ b/src/app/components/push-notification-prompt/push-notification-prompt.component.html
@@ -14,7 +14,7 @@
       <button mat-button (click)="dismiss()">
         Maybe Later
       </button>
-      <button mat-raised-button color="primary" (click)="enableNotifications()">
+      <button mat-flat-button (click)="enableNotifications()">
         <mat-icon>notifications</mat-icon>
         Enable Notifications
       </button>
