style: Add margin to button in tag input and comment out debug logs in layout service

--- a/src/app/pages/article/editor/editor.component.scss
+++ b/src/app/pages/article/editor/editor.component.scss
@@ -266,6 +266,10 @@
         .tag-input {
           flex: 1;
         }
+
+        button {
+          margin-top: 8px;
+        }
       }
 
       .tags-container {
