--- a/src/app/pages/article/editor/editor.component.scss
+++ b/src/app/pages/article/editor/editor.component.scss
@@ -34,6 +34,25 @@
     padding: 2rem 0;
     // padding: 48px 24px;
 
+    .top-action-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 16px;
+
+      button {
+        mat-icon {
+          font-size: 28px;
+          width: 28px;
+          height: 28px;
+        }
+
+        &.active {
+          color: var(--mat-sys-primary);
+          background-color: var(--mat-sys-primary-container);
+        }
+      }
+    }
+
     .article-image-section {
       margin-bottom: 32px;
       padding-bottom: 32px;
