--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -238,6 +238,12 @@
   }
 }
 
+.footer-right-group {
+  display: inline-flex;
+  align-items: center;
+  gap: 0;
+}
+
 .repost-header {
   font-style: italic;
   opacity: 0.7;
