--- a/src/app/pages/article/editor/editor.component.scss
+++ b/src/app/pages/article/editor/editor.component.scss
@@ -374,6 +374,15 @@
         margin-right: 4px;
       }
     }
+
+    .reset-button {
+      margin-right: auto;
+      color: var(--mat-sys-error);
+
+      &:hover {
+        background-color: var(--mat-sys-error-container);
+      }
+    }
   }
 
   .metadata-form {
