feat: Update font family to 'Protest Strike' for headers and inputs in rich text editor

--- a/src/app/pages/article/editor/editor.component.scss
+++ b/src/app/pages/article/editor/editor.component.scss
@@ -251,7 +251,7 @@
       padding: 0;
       margin: 0 0 24px 0;
       color: var(--mat-sys-on-surface);
-      font-family: inherit;
+      font-family: 'Protest Strike', sans-serif;
 
       &::placeholder {
         color: var(--mat-sys-on-surface-variant);
