--- a/src/app/components/rich-text-editor/rich-text-editor.component.scss
+++ b/src/app/components/rich-text-editor/rich-text-editor.component.scss
@@ -92,6 +92,7 @@
       h3 {
         color: var(--mat-sys-on-surface);
         margin: 16px 0 8px 0;
+        font-family: 'Protest Strike', sans-serif;
       }
 
       h1 {
